--- a/AdventureWorks.Web/Content/Site.css
+++ b/AdventureWorks.Web/Content/Site.css
@@ -22,3 +22,23 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.search-textbox {
+    width: 100%;
+    max-width: 100%;
+}
+
+.search-section {
+    padding-bottom: 10px;
+}
+
+.search-results {
+    padding-top: 10px;
+}
+
+.item {
+    width: 100%;
+    border: 1px solid #999;
+    padding: 5px;
+    margin-bottom: 5px;
+}
