--- a/AdventureWorks.Web/Views/Shared/_Layout.cshtml
+++ b/AdventureWorks.Web/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Departments", "Index", "Departments")</li>
+                    <li>@Html.ActionLink("Search", "Index", "Search")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
